feat: add report categories (#230)
