# docs/openapi.yaml
@@ -242,6 +242,8 @@ paths:
               type: object
               required: [reason]
               properties:
+                category:
+                  $ref: "#/components/schemas/ReportCategory"
                 reason:
                   type: string
                 posterToken:
@@ -460,6 +462,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/BoardSlugQuery"
         - $ref: "#/components/parameters/Limit"
+        - $ref: "#/components/parameters/ReportCategoryQuery"
       responses:
         "200":
           $ref: "#/components/responses/AnyData"
@@ -600,6 +603,11 @@ components:
         type: integer
         minimum: 1
         maximum: 200
+    ReportCategoryQuery:
+      name: category
+      in: query
+      schema:
+        $ref: "#/components/schemas/ReportCategory"
   requestBodies:
     Credentials:
       required: true
@@ -686,6 +694,9 @@ components:
           type: string
         code:
           type: string
+    ReportCategory:
+      type: string
+      enum: [Spam, Toxic, PII, Fake News, Illegal, Other]
     PageMeta:
       type: object
       properties:
